# mazhul-cpp-development

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  final-test.txt
cpp-semester-1/: README.md
cpp-semester-1/01-05-06-2025/: README.md
cpp-semester-1/01-05-06-2025/exercise 1/: CMakeLists.txt  ex1.cpp
cpp-semester-1/01-05-06-2025/exercise 2/: CMakeLists.txt  README.md  ex2.cpp
cpp-semester-1/01-05-06-2025/exersise 3/: CMakeLists.txt  README.md
cpp-semester-1/01-05-06-2025/exersise 4/: CMakeLists.txt  README.md  ex4.cpp
cpp-semester-1/01-05-06-2025/exersise 5/: CMakeLists.txt  README.md  ex5.cpp
cpp-semester-1/01-05-06-2025/exersise 6/: CMakeLists.txt  README.md  ex6.cpp
cpp-semester-1/01-05-06-2025/exersise 7/: CMakeLists.txt  README.md  ex7.cpp
cpp-semester-1/02-12-06-2025/: CMakeLists.txt  README.md  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  ex9GPT.cpp  ex9my.cpp
cpp-semester-1/03-19-06-2025/: CMakeLists.txt  README.md  ex1.cpp  ex12.cpp  ex13.cpp  ex2.cpp  ex22.cpp  ex23.cpp  exk.cpp  exnum.cpp
cpp-semester-1/04-26-05-2025/: README.md
cpp-semester-1/04-26-05-2025/Homework/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
cpp-semester-1/04-26-05-2025/classwork/: CMakeLists.txt  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex21.cpp  ex22.cpp  ex23.cpp  ex24.cpp  ex31.cpp  ex32.cpp  ex33.cpp  ex34.cpp  ex41.cpp  ex42.cpp  ex43.cpp  ex44.cpp  ex51.cpp  ex52.cpp  ex53.cpp  ex54.cpp  ex61.cpp  ex62.cpp
cpp-semester-1/05-03-10-2025/: README.md
cpp-semester-1/06-10-10-2025/: README.md
cpp-semester-1/06-10-10-2025/ClassWork/: CMakeLists.txt  client.cpp  polindrom.cpp
cpp-semester-1/07-14-2025/: CMakeLists.txt  README.md  sum.cpp
cpp-semester-1/07-17-10-2025/classwork/: CMakeLists.txt  Sequence.cpp  any.cpp
cpp-semester-1/11-14-11-2025/: CMakeLists.txt  README.md  differentEllements.cpp  shift.cpp
cpp-semester-1/12-28-11-2025/: CMakeLists.txt  README.md  matrix.cpp
cpp-semester-1/12-28-11-2025/HW/: CMakeLists.txt  theSieveOfEratosthenes  theSieveOfEratosthenes.cpp
cpp-semester-1/13-05-12-2025/: README.md
cpp-semester-1/13-05-12-2025/sorting/: CMakeLists.txt  bouble.cpp
cpp-semester-1/14-12-12-2025/: CMakeLists.txt  README.md  char.cpp
cpp-semester-1/15-19-12-2025/: CMakeLists.txt  README.md  findWord  findWord.cpp
cpp-semester-1/16-26-12-2025/: CMakeLists.txt  README.md  matrtix  matrtix.cpp
cpp-semester-1/9-31-10-2025/: CMakeLists.txt  README.md  taylor v2.cpp  taylor.cpp
cpp-semester-1/9-31-10-2025/HW/: CMakeLists.txt  my_try.cpp  taylor_sin.cpp
cpp-semester-1/Exam/: README.md
cpp-semester-1/Exam/BigTasks/: CMakeLists.txt  Insufficient2.cpp  READM4.md  README.md  README1.md  armstrong6.cpp  fibanachi5.cpp  harshad3.cpp  lucky7.cpp  magic4.cpp  palindrom1.cpp  simple8.cpp
cpp-semester-1/Exam/smallTasks/: CMakeLists.txt  README.md  deleteDIgInNum2.cpp
cpp-semester-1/kontrolnaya/: CMakeLists.txt  README.md  kr1.cpp  kr2  kr2.cpp  kr3  kr3.cpp  kr3Armstrong  kr3Armstrong.cpp
cpp-semester-1/labsV6/lab14/: CMakeLists.txt  README.md  part1.cpp  part2.cpp
cpp-semester-1/labsV6/lab17/: CMakeLists.txt  README.md  example.cpp  part1.cpp
cpp-semester-1/labsV6/lab8/: CMakeLists.txt  README.md  part1.cpp  part2.cpp
cpp-semester-1/labsV6/lab9/: CMakeLists.txt  README.md  part1.cpp  part1_pract.cpp  part2-pract_keybord.cpp  part2.cpp  part2_pract_tests.cpp
cpp-semester-2/01-11-02-2026/: ex1
cpp-semester-2/01-11-02-2026/classWork/: CMakeLists.txt  README.md  ex11  ex11.cpp
cpp-semester-2/01-11-02-2026/homeWork/: CMakeLists.txt  ex1-7  ex1-7.cpp
cpp-semester-2/02-13-02-2026/: CMakeLists.txt  README.md  ex.cpp  ex1.cpp  notMyCode.cpp
cpp-semester-2/03-18-02-2026/: CMakeLists.txt  README.md  Rationalnumber.cpp  Rationalnumber.h  classWork  classWork.cpp  main  main.cpp  rationalFraction.cpp  rationalFraction.h  vova  vova.cpp
cpp-semester-2/04-25-02-2026/: CMakeLists.txt  Timer.cpp  Timer.h  bank  bank.cpp  main  main.cpp
cpp-semester-2/04-25-02-2026/bankAccount/: BankAccount.cpp  BankAccount.h  BankService.h  Bankservice.cpp  CMakeLists.txt  README.md  app  bankAccount.cpp  bankAccount.h  main  main.cpp
cpp-semester-2/04-25-02-2026/bankAccountYaric/: bankAccount.cpp  main.cpp
cpp-semester-2/04-25-02-2026/counter/: CMakeLists.txt  README.md  counter.cpp  counter.h
cpp-semester-2/04-25-02-2026/queue/: CMakeLists.txt  README.md  main.cpp
cpp-semester-2/04-25-02-2026/timer/: CMakeLists.txt  README.md  Timer.cpp  Timer.h  main  main.cpp
cpp-semester-2/05-11-03-2026/: CMakeLists.txt  README.md  sort  sort.cpp
cpp-semester-2/06-18-03-2026/: CMakeLists.txt  main.cpp
cpp-semester-2/06-18-03-2026/task/:  predicates.h  CMakeLists.txt  README.md  filters.cpp  filters.h  main.cpp  predicates.cpp  predicates.h
cpp-semester-2/07-26-03-2026/: CMakeLists.txt  README.md  main.cpp
cpp-semester-2/08-01-04-2026/: Array.cpp  Array.h  CMakeLists.txt  README.md  main.cpp
cpp-semester-2/08-03-04-2026/: CMakeLists.txt  README.md  main.cpp  sorting_utils.cpp  sorting_utils.h
cpp-semester-2/09-10-04-2026/pizza/: CMakeLists.txt  Order.cpp  Order.h  Pizza.cpp  Pizza.h  README.md  main.cpp  pizza_app
cpp-semester-2/10-15-05-2026/: CMakeLists.txt  README.md  main.cpp
cpp-semester-2/10-17-05-2026/: CMakeLists.txt  main.cpp
cpp-semester-2/11-22-05-2026/balanced-brackets-validator/: CMakeLists.txt  README.md  main.cpp
cpp-semester-2/11-22-05-2026/reverse-polish-notation/: CMakeLists.txt  reverse-polish-notation  reverse-polish-notation.cpp
cpp-semester-2/11-24-05-2026/: CMakeLists.txt  main.cpp
cpp-semester-2/11-24-05-2026/iterableQueue/: CMakeLists.txt  main.cpp
cpp-semester-2/11-24-05-2026/iterableStack/: CMakeLists.txt  main.cpp
cpp-semester-2/12-06-06-2026/: CMakeLists.txt
cpp-semester-2/12-06-06-2026/game-object-relations-main/: CMakeLists.txt  Enemy.h  Game.h  Level.h  Player.h  README.md  ScoreManager.h  Weapon.h  class-diagram.puml  main.cpp
cpp-semester-2/12-08-06-2026/tic-tac-toe-main/: Board.h  BotPlayer.h  (+8 more)
ыуь3/: фыаа
(+69 files in other folders)
