cmake_minimum_required(VERSION 3.16)
project(mazhul_cpp_development LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# AUTO_SUBDIRECTORIES_BEGIN
add_subdirectory("cpp-semester-2/01-11-02-2026/classWork")
add_subdirectory("cpp-semester-2/01-11-02-2026/homeWork")
add_subdirectory("cpp-semester-2/02-13-02-2026")
add_subdirectory("cpp-semester-2/03-18-02-2026")
add_subdirectory("cpp-semester-2/04-25-02-2026/bankAccount")
add_subdirectory("cpp-semester-2/04-25-02-2026")
add_subdirectory("cpp-semester-2/04-25-02-2026/counter")
add_subdirectory("cpp-semester-2/04-25-02-2026/queue")
add_subdirectory("cpp-semester-2/04-25-02-2026/timer")
add_subdirectory("cpp-semester-2/05-11-03-2026")
add_subdirectory("cpp-semester-2/06-18-03-2026")
add_subdirectory("cpp-semester-2/06-18-03-2026/task")
add_subdirectory("cpp-semester-2/07-26-03-2026")
add_subdirectory("cpp-semester-2/08-01-04-2026")
add_subdirectory("cpp-semester-2/08-03-04-2026")
add_subdirectory("cpp-semester-2/09-10-04-2026/pizza")
add_subdirectory("cpp-semester-2/10-15-05-2026")
add_subdirectory("cpp-semester-2/10-17-05-2026")
add_subdirectory("cpp-semester-2/11-22-05-2026/balanced-brackets-validator")
add_subdirectory("cpp-semester-2/11-22-05-2026/reverse-polish-notation")
add_subdirectory("cpp-semester-2/11-24-05-2026/iterableQueue")
add_subdirectory("cpp-semester-2/11-24-05-2026/iterableStack")
add_subdirectory("cpp-semester-2/12-06-06-2026/game-object-relations-main")
add_subdirectory("cpp-semester-2/12-08-06-2026/tic-tac-toe-main")
add_subdirectory("cpp-semester-2/debug-lab/src")
add_subdirectory("cpp-semester-2/labsV6/lab1")
add_subdirectory("cpp-semester-2/labsV6/lab2")
add_subdirectory("cpp-semester-2/labsV6/lab3")
add_subdirectory("cpp-semester-2/labsV6/lab4")
add_subdirectory("cpp-semester-2/labsV6/lab5")
add_subdirectory("cpp-semester-2/labsV6/lab6")
add_subdirectory("cpp-semester-2/labsV6/lab7")

# AUTO_SUBDIRECTORIES_END
