cmake_minimum_required(VERSION 3.16)

project(homework LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(homework
        A.cpp
        B.cpp
        C.cpp
        D.cpp
        E.cpp
        F.cpp
        G.cpp
        H.cpp
        I.cpp
)
