cmake_minimum_required(VERSION 3.16)

project(classwork LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(classwork
    ex11.cpp
    ex12.cpp
    ex13.cpp
    ex14.cpp
    ex21.cpp
    ex22.cpp
    ex23.cpp
    ex24.cpp
    ex31.cpp
    ex32.cpp
    ex33.cpp
    ex34.cpp
    ex41.cpp
    ex42.cpp
    ex43.cpp
    ex44.cpp
    ex51.cpp
    ex52.cpp
    ex53.cpp
    ex54.cpp
    ex61.cpp
    ex62.cpp
)
