cmake_minimum_required(VERSION 3.16)

project(bigtasks LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(bigtasks
        armstrong6.cpp
        fibanachi5.cpp
        harshad3.cpp
        Insufficient2.cpp
        lucky7.cpp
        magic4.cpp
        palindrom1.cpp
        simple8.cpp
)
